--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,7 @@ buildscript {
         classpath 'net.minecraftforge.gradle:ForgeGradle:4.+'
         classpath 'org.spongepowered:mixingradle:0.7-SNAPSHOT'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath 'org.openjfx":javafx-graphics:12.0.1'
 
     }
 }
@@ -63,6 +64,7 @@ dependencies {
     addLib "org.jetbrains.kotlin:kotlin-stdlib:1.6.0"
     addLib "org.jetbrains.kotlin:kotlin-stdlib-common:$kotlin_version"
     addLib ("com.viaversion:viaversion:4.0.2-SNAPSHOT"){
+    addlib "org.openjfx":javafx-graphics:12.0.1"
         exclude module: 'mcmod-info'
     }
     addLib "com.viaversion:viabackwards:4.0.2-SNAPSHOT"
